examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__comparison_operators@a < b <= c == d >= e > f.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            ComparisonOperator(
                                ComparisonOperator {
                                    operators: [
                                        Token_Less(
                                            Token_Less {
                                                [RANGE]
                                            },
                                        ),
                                        Token_LessEqual(
                                            Token_LessEqual {
                                                [RANGE]
                                            },
                                        ),
                                        Token_EqualEqual(
                                            Token_EqualEqual {
                                                [RANGE]
                                            },
                                        ),
                                        Token_GreaterEqual(
                                            Token_GreaterEqual {
                                                [RANGE]
                                            },
                                        ),
                                        Token_Greater(
                                            Token_Greater {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    children: [
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
