examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__comparison_operators@a is not b.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            ComparisonOperator(
                                ComparisonOperator {
                                    operators: [
                                        Token_IsNot(
                                            Token_IsNot {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    children: [
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
