examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__comparison_operators@not a == b or c == d.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            BooleanOperator(
                                BooleanOperator {
                                    right: ComparisonOperator(
                                        ComparisonOperator {
                                            operators: [
                                                Token_EqualEqual(
                                                    Token_EqualEqual {
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            children: [
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                    operator: Token_Or(
                                        Token_Or {
                                            [RANGE]
                                        },
                                    ),
                                    left: NotOperator(
                                        NotOperator {
                                            argument: ComparisonOperator(
                                                ComparisonOperator {
                                                    operators: [
                                                        Token_EqualEqual(
                                                            Token_EqualEqual {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    children: [
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
