examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__exec_as_identifier@exec("""exec _code_ in _globs_, _locs_""").snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            String(
                                                                String {
                                                                    children: [
                                                                        StringStart(
                                                                            StringStart {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        StringContent(
                                                                            StringContent {
                                                                                children: [],
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        StringEnd(
                                                                            StringEnd {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
